<resources>
    <string name="app_name">Pig Dice</string>
    <string name="player_02">Player 02</string>
    <string name="player_01">Player 01</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="roll">Roll</string>
    <string name="roll2">ROLL</string>
    <string name="score">Score</string>
    <string name="total_score">Total Score</string>
    <string name="roll_the_dice">Roll the dice</string>
    <string name="hold">Hold</string>
    <string name="play_again">Play Again</string>
    <string name="current_score">Current</string>
    <string name="win">You Win</string>
    <string name="total">Total Score</string>
    <string name="restart">Restart</string>
    <string name="pig_dice">Pig Dice</string>
    <string name="start">Start</string>
    <string name="player_two_name">PLAYER TWO NAME</string>
    <string name="player_one_name">PLAYER ONE NAME</string>
</resources>